Move course details button next to dropdown for better UX

--- a/ProfileWorkareaExample-Midterm/ProfileWorkareaExample/src/UserInterface/WorkAreas/FacultyRole/ManageCourseWorkResp/ManageCoursesJPanel.form
+++ b/ProfileWorkareaExample-Midterm/ProfileWorkareaExample/src/UserInterface/WorkAreas/FacultyRole/ManageCourseWorkResp/ManageCoursesJPanel.form
@@ -112,14 +112,14 @@
     </Component>
     <Component class="javax.swing.JButton" name="viewCourseDetailsBtn">
       <Properties>
-        <Property name="text" type="java.lang.String" value="View/Edit Course Details"/>
+        <Property name="text" type="java.lang.String" value="View/Edit Details"/>
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="viewCourseDetailsBtnActionPerformed"/>
       </Events>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="390" y="380" width="180" height="25"/>
+          <AbsoluteConstraints x="460" y="60" width="150" height="25"/>
         </Constraint>
       </Constraints>
     </Component>
